--- a/src/view/CadastroAdministrador.form
+++ b/src/view/CadastroAdministrador.form
@@ -112,7 +112,7 @@
                               <Group type="102" alignment="0" attributes="0">
                                   <Component id="nome" min="-2" pref="296" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="pesquisarAdministrador" min="-2" max="-2" attributes="0"/>
+                                  <Component id="pesquisar" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                               </Group>
                           </Group>
@@ -140,7 +140,7 @@
                       <Component id="jLabel4" alignment="1" min="-2" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="nome" alignment="3" min="-2" pref="26" max="-2" attributes="0"/>
-                          <Component id="pesquisarAdministrador" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="pesquisar" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
@@ -516,12 +516,12 @@
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
           </AuxValues>
         </Component>
-        <Component class="javax.swing.JButton" name="pesquisarAdministrador">
+        <Component class="javax.swing.JButton" name="pesquisar">
           <Properties>
             <Property name="text" type="java.lang.String" value="Pesquisar"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="pesquisarAdministradorActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="pesquisarActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JButton" name="novo">
